<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>xyz.spc.serve</groupId>
        <artifactId>Serve</artifactId>
        <version>3.0.0-RELEASE</version>
    </parent>
    <groupId>xyz.spc.serve.group</groupId>
    <artifactId>Cluster</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>xyz.spc.serve.auxiliary</groupId>
            <artifactId>Auxiliary</artifactId>
            <version>3.0.0-RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>xyz.spc.infra.special</groupId>
            <artifactId>Special</artifactId>
            <version>3.0.0-RELEASE</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
